# lightdm-rs

./: Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: CI.yml  docs.yml  image.yml
examples/: Cargo.toml  main.rs
lightdm/: Cargo.toml  Gir.toml
lightdm-gir-files/: GLib-2.0.gir  GModule-2.0.gir  GObject-2.0.gir  Gio-2.0.gir  LightDM-1.gir
lightdm/src/: greeter.rs  lib.rs
lightdm/src/auto/: constants.rs  enums.rs  functions.rs  greeter.rs  language.rs  layout.rs  mod.rs  session.rs  user.rs  user_list.rs  versions.txt
lightdm/sys/: Cargo.toml  Gir.toml  build.rs
lightdm/sys/src/: lib.rs
lightdm/sys/src/auto/: versions.txt
lightdm/sys/tests/: abi.rs  constant.c  layout.c  manual.h
