[workspace]
resolver = "3"
members = ["lightdm", "lightdm/sys"]

exclude = ["gir"]

[workspace.package]
version = "0.1.0"
edition = "2024"
repository = "https://github.com/zaynchen/lightdm-rs"
license = "MIT"
keywords = ["lightdm"]
categories = ["api-bindings"]
exclude = ["gir-files/*", "lightdm-gir-files"]

[workspace.dependencies]
gio = { version = "0.22" }
gio-sys = { version = "0.22" }
glib = { version = "0.22" }
glib-sys = { version = "0.22" }
gobject-sys = { version = "0.22" }
