[package]
name = "lightdm"
description = "Rust bindings for liblightdm-gobject-1"

[package.version]
workspace = true

[package.edition]
workspace = true

[package.repository]
workspace = true

[package.license]
workspace = true

[package.keywords]
workspace = true

[package.categories]
workspace = true

[package.exclude]
workspace = true

[package.metadata.docs.rs]
all-features = true
# For build.rs scripts
rustc-args = ["--cfg", "docsrs"]
# For rustdoc
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
ffi = { package = "lightdm-sys", path = "sys" }
gio.workspace = true
glib.workspace = true
libc = "0.2"

[features]
v1_11_1 = ["ffi/v1_11_1"]
