[package]
name = "lightdm"
description = "Rust bindings for liblightdm-gobject-1"
documentation = "https://zaynchen.github.io/lightdm-rs/stable/latest/docs/lightdm/index.html"

version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]

[dependencies]
ffi = { package = "lightdm-sys", path = "sys", version = "0.1" }
gio.workspace = true
glib.workspace = true
libc = "0.2"

[features]
v1_11_1 = ["ffi/v1_11_1"]
