[package]
name = "lightdm-sys"
build = "build.rs"
description = "FFI bindings for liblightdm-gobject-1"

[package.edition]
workspace = true

[package.version]
workspace = true

[package.authors]
workspace = true

[package.categories]
workspace = true

[package.repository]
workspace = true

[package.license]
workspace = true

[package.keywords]
workspace = true

[package.exclude]
workspace = true

[package.metadata.system-deps.liblightdm_gobject_1]
name = "liblightdm-gobject-1"
version = "1"

[package.metadata.system-deps.liblightdm_gobject_1.v1_11_1]
version = "1.11.1"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]
all-features = true

[dependencies]
libc = "0.2"

[dependencies.glib-sys]
workspace = true

[dependencies.gio-sys]
workspace = true

[dependencies.gobject-sys]
workspace = true

[build-dependencies]
system-deps = "7"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
v1_11_1 = []
