[package]
name = "lightdm-sys"
description = "FFI bindings for liblightdm-gobject-1"
documentation = "https://zaynchen.github.io/lightdm-rs/stable/latest/docs/lightdm_sys/index.html"
build = "build.rs"

[package.version]
workspace = true

[package.edition]
workspace = true

[package.repository]
workspace = true

[package.license]
workspace = true

[package.keywords]
workspace = true

[package.categories]
workspace = true

[package.exclude]
workspace = true

[package.metadata.system-deps.liblightdm_gobject_1]
name = "liblightdm-gobject-1"
version = "1"

[package.metadata.system-deps.liblightdm_gobject_1.v1_11_1]
version = "1.11.1"

[package.metadata.docs.rs]
rustdoc-args = ["--generate-link-to-definition"]
all-features = true

[dependencies]
libc = "0.2"

[dependencies.gio-sys]
workspace = true

[dependencies.glib-sys]
workspace = true

[dependencies.gobject-sys]
workspace = true

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[build-dependencies]
system-deps = "7"

[features]
v1_11_1 = []
